BugFix: Mobile view overflow unwanted white space

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 
 .background-animated-svg-blocks {
   position: fixed;
-  width: 100%;
+  width: 100vw;
   z-index: 5;
   opacity: 0.3;
 }
@@ -27,10 +27,14 @@
   position: relative;
 }
 
+html {
+  overflow-x: hidden !important;
+}
+
 body {
+  overflow-x: hidden !important;
   font-family: Roboto !important;
   background-color: var(--light) !important;
-  overflow-x: hidden;
 }
 
 .custom-dark-col-header {
