--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,5 @@
 .navbar-main-div {
+  width: 100vw !important;
   position: fixed !important;
   top: 0;
   background-color: var(--light) !important;
